--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
           <%= link_to "Instatext", root_path, class: "brand" %>
           <nav>
             <ul class="nav pull-right">
-              <li class="active"><a href="#masthead">Top</a></li>
+              <li class="active"><a href="#masthead">Prefs</a></li>
             </ul>
           </nav>
         </div>
