--- a/app/views/feed/index.html.erb
+++ b/app/views/feed/index.html.erb
@@ -1,8 +1,12 @@
-<h1><%= @user.username %> feed</h1>
+<h1><%= @user.username %>'s feed</h1>
 
-<p><%= @feed.data.first.keys %></p>
+<p>@feed.data.keys: <%= @feed.data.first.keys %></p>
+<p>@feed.data.images.keys: <%= @feed.data.first.images.keys %></p>
 
 <% @feed.data.each do |post| %>
-	<img src="<%= post.images.thumbnail.url %>">
-	<p><%= post.caption.text %></p>
+	<div class="post well">
+		<h3>#<%= post.user.username %> <small>says...</small></h3>
+		<img src="<%= post.images.low_resolution.url %>">
+		<p><%= post.caption.text %></p>
+	</div>
 <% end %>
