--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= csrf_meta_tag %>
   </head>
   <body>
-    <div class="navbar navbar-fixed-top navbar-inversegithub">
+    <div class="navbar navbar-fixed-top navbar-inverse">
       <div class="navbar-inner">
         <div class="container">
           <%= link_to "Instatext", root_path, class: "brand" %>
@@ -24,6 +24,7 @@
       <%= yield %>
 
       <footer>
+        <p><%= debug(params) %></p>
         <p>&copy; Ryan Ringler 2013</p>
       </footer>
     </div>
