--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,7 @@
-<h1>Users#new</h1>
-
 <h3>Almost done.</h3>
 
-<p>Awesome.  Now let's get a phone number so we can text you when 
-	 someone posts.</p>
+<p>You've never been here before.  Let's grab a phone number so we can 
+	text you when someone posts.</p>
 
 <%= form_for @user, html: { class: "form-horizontal" } do |f| %>
   <div class="control-group">
