--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,1 +1,34 @@
 <h2>Users#edit</h2>
+
+<%= form_tag user_path(current_user), method: :put,
+																			class: 'form-horizontal' do %>
+	<div class='well'>
+		<div class='control-group'>
+			<%= label_tag 'phone', 'Phone:', class: 'control-label' %>
+			<div class='controls'>
+				<%= text_field_tag 'phone', @user.phone %>
+			</div>
+		</div>
+
+		<div class='control-group'>
+			<%= label_tag 'follows[]', 'Active alerts:', class: 'control-label' %>
+			<div class='controls'>		
+				<% @follows.each do |f| %>
+					<label class='checkbox'>
+						<%= check_box_tag 'follows[]',
+															f.username,
+															false,
+															class: 'control-group' %>
+						<%= f.username %>
+					</label>
+				<% end %>
+			</div>
+		</div>
+
+		<div class='control-group'>
+			<div class='controls'>
+				<%= submit_tag 	'Update alerts', class:'btn' %>
+			</div>
+		</div>
+	</div>
+<% end %>
