--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @username %>'s feed</h1>
+
 <!--
 <p>@feed.data.keys: <%= @feed.data.first.keys %></p>
 <p>@feed.data.images.keys: <%= @feed.data.first.images.keys %></p>
@@ -6,8 +7,13 @@
 
 <% @feed.data.each do |post| %>
 	<div class="post well">
-		<h3>#<%= post.user.username %> <small>says...</small></h3>
-		<img src="<%= post.images.low_resolution.url %>">
+
+		<h3>
+			<small><%= time_ago_in_words(Time.at(post.created_time.to_f)) %> ago</small>
+			#<%= post.user.username %>
+			<small>said...</small>
+		</h3>
+		<img src="<%= post.images.standard_resolution.url %>">
 		<p><%= post.caption.text %></p>
 	</div>
 <% end %>
