--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,7 +13,7 @@
 
 	<div class="control-group">
 		<div class="controls">
-			<%= f.submit "Ok", class: "btn btn-large btn-primary" %>
+			<%= f.submit "Ok", class: "btn btn-primary" %>
 		</div>
 	</div>
 <% end %>
