--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,42 +2,21 @@
 <html>
   <head>
     <title>Instatext</title>
-    <%= stylesheet_link_tag "application", media: :all %>
-    <%= javascript_include_tag "application" %>
+    <%= stylesheet_link_tag 'application', media: :all %>
+    <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tag %>
   </head>
   <body>
-    <div class="navbar navbar-fixed-top navbar-inverse">
-      <div class="navbar-inner">
-        <div class="container">
-          <%= link_to "Instatext", root_path, class: "brand" %>
-          <nav>
-            <ul class="nav pull-right">
-              <% if current_user %>
-                <li class="active">
-                  <%= link_to "Prefs", edit_user_path(current_user) %>
-                </li>
-                <li class="active">
-                  <%= link_to "Log out", logout_path %>
-                </li>
-              <% else %>
-                <li class="active">
-                  <%= link_to "Log in", session_connect_path %>
-                </li>
-              <% end %>
-            </ul>
-          </nav>
-        </div>
+    <div id='wrap'>
+      <%= render 'layouts/navbar' %>
+
+      <div id='content' class='container'>
+        <%= yield %>
       </div>
+
+      <div id='push'></div>
     </div>
 
-    <div class="container">
-      <%= yield %>
-
-      <footer>
-        <p><%= debug(params) %></p>
-        <p>&copy; Ryan Ringler 2013</p>
-      </footer>
-    </div>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
