--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,6 @@
-<h2>Users#edit</h2>
+<div class="page-header">
+	<h2>Edit profile</h2>
+</div>
 
 <%= form_tag user_path(current_user), method: :put,
 																			class: 'form-horizontal' do %>
