--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,8 @@
-<h3>Almost done.</h3>
+<div class="page-header">
+	<h1>Almost done.</h1>
+</div>
 
-<p>You've never been here before.  Let's grab a phone number so we can 
-	text you when someone posts.</p>
+<p class='lead'>You've never been here before.  Let's grab a phone number so we can text you when someone posts.</p>
 
 <%= form_for @user, html: { class: "form-horizontal" } do |f| %>
   <div class="control-group">
