--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,20 +1,20 @@
-<div class="page-header">
+<div class='page-header'>
 	<h1>Almost done.</h1>
 </div>
 
 <p class='lead'>You've never been here before.  Let's grab a phone number so we can text you when someone posts.</p>
 
-<%= form_for @user, html: { class: "form-horizontal" } do |f| %>
-  <div class="control-group">
-	  <%= f.label :phone, class: "control-label" %>
+<%= form_for @user, html: { class: 'form-horizontal' } do |f| %>
+  <div class='control-group'>
+	  <%= f.label :phone, class: 'control-label' %>
 	  <div class="controls">
-		  <%= f.text_field :phone %>
+		  <%= f.text_field :phone, class: 'input-medium' %>
 		</div>
 	</div>
 
-	<div class="control-group">
-		<div class="controls">
-			<%= f.submit "Ok", class: "btn btn-primary" %>
+	<div class='control-group'>
+		<div class='controls'>
+			<%= f.submit 'Ok', class: 'btn btn-primary' %>
 		</div>
 	</div>
 <% end %>
