--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,7 +9,7 @@
             <li><%= link_to 'Prefs', edit_user_path(current_user) %></li>
             <li><%= link_to 'Log out', logout_path %></li>
           <% else %>
-            <li><%= link_to 'Log in', session_connect_path %></li>
+            <li><%= link_to 'Log in', connect_path %></li>
           <% end %>
         </ul>
       </nav>
