Fixed instagram subscriptions

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -34,6 +34,10 @@ html, body {
   max-width: 97%;
 }
 
+.navbar-inner .container {
+  width: 97%;
+}
+
 #content {
 	max-width: 90%;
 	margin: 40px 40px;
